      Bates, thanks to the \sQuote{R Contributors} working group.

      \item Printing objects of class \code{"roman"}, \code{"hexmode"},
      \code{"octmode"}, \code{"person"}, \code{"bibentry"}, or
      \code{"citation"} of length zero now print something better, a
      sixth of which fixes \PR{18422}, reported by Benjamin Feakins.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.2 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{compactPDF()} gets a \code{verbose} option.
    }
  }
  \subsection{C-LEVEL FACILITIES}{
    \itemize{
      \item The definition of \code{DL_FUNC} in \file{R_ext/Rdynload.h}
      has been changed to be fully C-compliant.  This means that
      functions loaded \emph{via} for example \code{R_GetCCallable} need
      to be cast to an appropriate type if they have any arguments.

      \item \code{.Machine} has a new element \code{sizeof.time_t} to
      identify old systems with a 32-bit type and hence a limited range
      of date-times (and limited support for dates millions of years
      from present).
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item As \code{"POSIXlt"} objects may be \dQuote{partially filled}
      and their list components meant to be recycled, \code{length()} now
      is the length of the longest component.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.2.2}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item \code{tools::Rdiff(useDiff = TRUE)} checks for the presence
      of an external \command{diff} command and switches to
      \code{useDiff = FALSE} if none is found.
      This allows \command{R CMD Rdiff} to always work.

      \item On Windows, environment variable
      \env{R_LIBCURL_SSL_REVOKE_BEST_EFFORT} can be used to switch to
      only \sQuote{best-effort} SSL certificate revocation checks with
      the default \code{"libcurl"} download method.  This reduces
      security, but may be needed for downloads to work with MITM
      proxies (\PR{18379}).
